--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-6.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-6.htm
@@ -12,20 +12,20 @@
 <p> In this section, you will learn about using the Hierarchy view by viewing
 classes and members in a variety of different ways. </p>
 <ol>
-  <li> In the Package Explorer view, find&nbsp;<em>junit.framework.TestCase.java</em>. 
-    From its context menu, select&nbsp;<strong>Open Type Hierarchy</strong>. You 
+  <li> In the Package Explorer view, find <em>junit.framework.TestCase.java</em>. 
+    From its context menu, select <strong>Open Type Hierarchy</strong>. You 
     can also open type hierarchy view: 
     <ul>
-      <li> from the menu bar by selecting&nbsp;<strong>Navigate &gt; Open Type 
-        Hierarchy</strong>.&nbsp; </li>
-      <li> from the keyboard by pressing F4 after selecting&nbsp;<em>TestCase.java</em>.&nbsp; 
+      <li> from the menu bar by selecting <strong>Navigate &gt; Open Type 
+        Hierarchy</strong>.</li>
+      <li> from the keyboard by pressing F4 after selecting <em>TestCase.java</em>. 
       </li>
       <li> by using drag and drop to drop TestCase.java in an open hierarchy 
         view.
 	  </li>
     </ul>
 	<p>
-    <img src="../images/qs-28.gif" alt="Context menu" height="302" width="306">
+    <img src="../images/qs-28.gif" alt="Context menu">
 	</p>
   </li>
   <li> The buttons in the view tool bar control which part of the hierarchy is
@@ -34,55 +34,55 @@ classes and members in a variety of different ways. </p>
     small arrow on the left side of the type icon of TestCase indicates that the 
     hierarchy was opened on this type.
 	<p>
-    <img src="../images/qs-29.gif" alt="Type hierarchy" height="156" width="229"> 
+    <img src="../images/qs-29.gif" alt="Type hierarchy"> 
 	</p>
   </li>
-  <li> Click the&nbsp;<strong>Show the Supertype Hierarchy</strong> button to 
+  <li> Click the <strong>Show the Supertype Hierarchy</strong> button to 
     see a hierarchy showing the type's parent elements including implemented
-    interfaces.&nbsp; This view shows the results of going up the type hierarchy.
+    interfaces. This view shows the results of going up the type hierarchy.
 	<p>
-    <img src="../images/qs-30.gif" alt="Supertype hierarchy" height="264" width="240"> 
+    <img src="../images/qs-30.gif" alt="Supertype hierarchy"> 
 	</p>
     In this &quot;reversed hierarchy&quot; view, you can see that TestCase implements 
     the Test interface. </li>
   <li> Click the&nbsp;<strong>Show the Subtype Hierarchy</strong> button in the 
     view toolbar.
 	<p>
-    <img src="../images/qs-31.gif" alt="Subtype hierarchy" height="120" width="240"> 
+    <img src="../images/qs-31.gif" alt="Subtype hierarchy"> 
 	</p>
   </li>
-  <li> Click the&nbsp;<strong>Lock View and Show Members in Hierarchy</strong> 
+  <li> Click the <strong>Lock View and Show Members in Hierarchy</strong> 
     button in the toolbar of the member pane, then select the runTest() method 
     in the member pane. The view will now show all the types implementing runTest(). 
 	<p>
-    <img src="../images/qs-32.gif" alt="Subtype hierarchy showing method implementors" height="556" width="262"> 
+    <img src="../images/qs-32.gif" alt="Subtype hierarchy showing method implementors"> 
 	</p>
   </li>
-  <li> In the Hierarchy view, click the&nbsp;<strong>Show the Supertype Hierarchy</strong> 
+  <li> In the Hierarchy view, click the <strong>Show the Supertype Hierarchy</strong> 
     button. Then on the member pane, select <code>countTestCases()</code> to display 
     the places where this method is overridden.
 	<p>
-    <img src="../images/qs-33.gif" alt="Supertype hierarchy showing method implementors" height="254" width="269"> 
+    <img src="../images/qs-33.gif" alt="Supertype hierarchy showing method implementors"> 
 	</p>
   </li>
-  <li> In the Hierarchy view select the Test element and select&nbsp;<strong>Focus 
-    On 'Test'</strong> from its context menu.&nbsp; The resource containing 
+  <li> In the Hierarchy view select the Test element and select <strong>Focus 
+    On 'Test'</strong> from its context menu. The resource containing 
     the selected element is represented in the Hierarchy view and also opens in 
     an active editor. </li>
   <li> Activate the Package Explorer view and select the package junit.framework. 
-    Use&nbsp;<strong>Open Type Hierarchy</strong> from its context menu. A hierarchy 
+    Use <strong>Open Type Hierarchy</strong> from its context menu. A hierarchy 
     is opened containing all classes of the package. For completion of the tree, 
     the hierarchy also shows some classes from other packages. These types are 
-    shown by a type icon with a white fill.&nbsp;
+    shown by a type icon with a white fill.
 	<p>
-    <img src="../images/qs-33a.gif" alt="Hierarchy on a package" height="226" width="263"> 
+    <img src="../images/qs-33a.gif" alt="Hierarchy on a package"> 
 	</p>
   </li>
-  <li> Use&nbsp;<strong>Previous Type Hierarchies</strong> to go back to a previously 
+  <li> Use <strong>Previous Type Hierarchies</strong> to go back to a previously 
     opened element. Click on the arrow next to the button to see a menu or click 
     on the button to edit the history list.
 	<p>
-    <img src="../images/qs-33b.gif" alt="History menu" height="226" width="263"> 
+    <img src="../images/qs-33b.gif" alt="History menu"> 
 	</p>
   </li>
   <li> From the menu bar, select&nbsp;<strong>Window &gt; Preferences</strong>. 
@@ -93,17 +93,14 @@ classes and members in a variety of different ways. </p>
     the selected type is shown in a new perspective (the Hierarchy perspective), 
     and its source is shown in the Java editor.&nbsp; By setting the preference 
     option for viewing type hierarchy perspectives, you can have more than one 
-    type hierarchy in your workbench and switch between them as needed.
-	You can also configure a new perspective to open in a new window under&nbsp;<strong>Window 
-    &gt; Preferences &gt; Workbench &gt; Perspectives</strong>.
-  </li>
+    type hierarchy in your workbench and switch between them as needed.</li>
 </ol>
-<img src="../images/ngrelc.gif" alt="Related concepts" border="0" height="27" width="159"> 
+<img src="../images/ngrelc.gif" alt="Related concepts" border="0" > 
 <p> <a href="../concepts/concepts-7.htm">Java views</a> </p>
-<p> <img src="../images/ngrelt.gif" alt="Related tasks" border="0" height="27" width="159"> 
+<p> <img src="../images/ngrelt.gif" alt="Related tasks" border="0"  > 
 </p>
 <p> <a href="../tasks/tasks-37.htm">Using the Hierarchy view</a> </p>
-<p> <img src="../images/ngrelr.gif" alt="Related reference" border="0" height="27" width="159"> 
+<p> <img src="../images/ngrelr.gif" alt="Related reference" border="0" > 
 </p>
 <p> <a href="../reference/ref-type-hierarchy.htm">Type Hierarchy view</a><br>
   <a href="../reference/ref-13.htm">Java Base preference page</a> </p>
