--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-7.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-7.htm
@@ -15,14 +15,14 @@
 <p>Build problems are displayed in the Tasks view and annotated in the vertical
 ruler of your source code. </p>
 <ol>
-  <li> Open&nbsp;<em>junit.framework.TestCase.java</em> in the editor from the 
+  <li> Open <em>junit.framework.TestCase.java</em> in the editor from the 
     Package Explorer view. </li>
   <li> Add a syntax error by deleting the semicolon at the end of the package
     declaration in the source code. 
-    <p> <img src="../images/qs-34.gif" alt="Editor with missing semicolon" height="108" width="288"> 
+    <p> <img src="../images/qs-34.gif" alt="Editor with missing semicolon"> 
     </p>
   </li>
-  <li> Click the&nbsp;<strong>Save</strong> button.&nbsp; The project is rebuilt
+  <li> Click the <strong>Save</strong> button. The project is rebuilt
     and the problem is indicated in several ways as follows: 
     <ul>
       <li> In the Tasks view, the problems are listed </li>
@@ -34,59 +34,59 @@ ruler of your source code. </p>
       <li> Squiggly lines appear under the word which might cause the error </li>
       <li> The editor tabs are annotated with a problem marker </li>
     </ul>
-    <p><img src="../images/qs-35.gif" alt="Problem marker in Package Explorer, editor and Tasks view" height="225" width="404"> 
+    <p><img src="../images/qs-35.gif" alt="Problem marker in Package Explorer, editor and Tasks view"> 
     </p>
   </li>
   <li> You can hover over the problem marker in the vertical ruler to view a description 
     of the problem. 
-    <p> <img src="../images/qs-36.gif" alt="Problem marker hover" height="148" width="307"> 
+    <p> <img src="../images/qs-36.gif" alt="Problem marker hover"> 
     </p>
   </li>
-  <li> Click the&nbsp;<strong>Close</strong> button on the editor's tab to 
+  <li> Click the <strong>Close</strong> button on the editor's tab to 
     close the editor. </li>
   <li> In the Tasks view, select a problem in the list. Open its context menu 
     and select Go To. The file is opened in the editor at the location of the 
     problem. 
-    <p> <img src="../images/qs-37.gif" alt="Tasks view" height="350" width="408"> 
+    <p> <img src="../images/qs-37.gif" alt="Tasks view"> 
     </p>
   </li>
-  <li> Correct the problem in the editor by adding the semicolon.&nbsp; Click 
-    the&nbsp;<strong>Save</strong> button. The project is rebuilt and the problem indicators disappear. </li>
-  <li> In the Outline view, select the method getName().&nbsp; The editor will 
+  <li> Correct the problem in the editor by adding the semicolon. Click 
+    the <strong>Save</strong> button. The project is rebuilt and the problem indicators disappear. </li>
+  <li> In the Outline view, select the method <em>getName()</em>. The editor will 
     scroll to this method. </li>
   <li> On the first line of the method change the returned variable <code>fName</code> 
     to <code>fTestName</code>. While you type, a problem highlight underline appears 
     on fTestName, to indicate a problem. Hovering over the highlighted problem 
-    will display a description of the problem. </li>
+    will display a description of the problem.</li>
   <li> On the marker bar a light bulb marker appears. The light bulb signals that 
     correction proposals are available for this problem. 
-    <p> <img src="../images/qs-37a.gif" alt="Light bulb and problem highlight line" height="186" width="502"> 
+    <p> <img src="../images/qs-37a.gif" alt="Light bulb and problem highlight line"> 
     </p>
   </li>
-  <li> Set the cursor inside the marked range and choose&nbsp;<strong>Quick Fix</strong> 
+  <li> Set the cursor inside the marked range and choose <strong>Quick Fix</strong> 
     from the Edit menu bar. You can also press Ctrl+1 or left click the light 
     bulb. A selection dialog appears with possible corrections. 
-    <p> <img src="../images/qs-37b.gif" alt="Correction proposals" height="304" width="750"> 
+    <p> <img src="../images/qs-37b.gif" alt="Correction proposals"> 
     </p>
   </li>
   <li> Select 'Change to fName' to fix the problem. The problem highlight 
     line will disappear as the correction is applied. </li>
   <li> Close the file without saving. </li>
-  <li> You can control how problems are indicated on the&nbsp; &nbsp;<strong>Window 
+  <li> You can control how problems are indicated on the <strong>Window 
     &gt; Preferences &gt; Java &gt; Editor </strong>page on the <strong>Annotations
     </strong>tab. </li>
 </ol>
-<img src="../images/ngrelc.gif" alt="Related concepts" border="0" height="27" width="159"> 
+<img src="../images/ngrelc.gif" alt="Related concepts" border="0"> 
 <p> <a href="../concepts/concepts-7.htm">Java editor</a><br>
   <a href="../tasks/tasks-6.htm">Java views</a><br>
   <a href="../concepts/concepts-4.htm">Java builder</a> </p>
-<p> <img src="../images/ngrelt.gif" alt="Related tasks" border="0" height="27" width="159"> 
+<p> <img src="../images/ngrelt.gif" alt="Related tasks" border="0"> 
 </p>
 <p> <a href="../tasks/tasks-54.htm">Using the Java editor</a><br>
   <a href="../tasks/tasks-69.htm">Viewing documentation and information</a><br>
   <a href="../tasks/tasks-175.htm">Using quick fix</a><a href="../tasks/tasks-106.htm"></a> 
 </p>
-<p> <img src="../images/ngrelr.gif" alt="Related reference" border="0" height="27" width="159"> 
+<p> <img src="../images/ngrelr.gif" alt="Related reference" border="0"> 
 </p>
 <p> <a href="../reference/ref-21.htm">Editor preference page</a><br>
   <a href="../reference/ref-java-editor-quickfix.htm">Quick Fix</a> </p>
