--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-8.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-8.htm
@@ -17,12 +17,12 @@ semantic behavior. </p>
   </li>
   <li> From its context menu, select&nbsp;<strong>Refactor &gt; Rename</strong>. </li>
   <li> In the&nbsp;<strong>Enter New Name</strong> field on the Rename Compilation 
-    Unit page, type &quot;<em>MyTestCase</em>&quot;. 
-    <p> <img src="../images/qs-38.gif" alt="Rename refactoring wizard" height="331" width="608"> 
+    Unit page, type &quot;<em>TestCase2</em>&quot;. 
+    <p> <img src="../images/qs-38.gif" alt="Rename refactoring wizard"> 
     </p>
   </li>
   <li> To preview the changes that will be made as a result of renaming the
-    class, press&nbsp;<strong>Preview</strong>.
+    class, press <strong>Preview &gt;</strong>.
   </li>
   <li> The workbench analyzes the proposed change and presents you with a preview 
     of the changes that would take place if you actually choose to rename this 
@@ -30,7 +30,7 @@ semantic behavior. </p>
     statements in other compilation units, there are other compilation units
     affected by the change.&nbsp; These are shown in a list of changes in the
     preview pane. </p>
-    <p> <img src="../images/qs-39.gif" alt="Refactoring wizard preview page" height="509" width="608"> 
+    <p> <img src="../images/qs-39.gif" alt="Refactoring wizard preview page"> 
     </p>
   </li>
   <li> On the Refactoring preview page, you can scroll through the various proposed 
@@ -42,8 +42,8 @@ semantic behavior. </p>
 compilation units.&nbsp; These changes can be undone as a group.</p>
 <ol>
   <li> In the menu bar, select&nbsp;<strong>Refactor &gt; Undo Rename TestCase.java 
-    to MyTestCase.java</strong>. 
-    <p> <img src="../images/qs-40.gif" alt="Refactor menu" height="235" width="437"> 
+    to TestCase2.java</strong>. 
+    <p> <img src="../images/qs-40.gif" alt="Refactor menu"> 
     </p>
   </li>
   <li> The refactoring changes are undone, and the workbench returns to its previous 
