--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-10.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-10.htm
@@ -14,31 +14,31 @@
 Refactoring actions change the structure of your code without changing its
 semantic behavior. </p>
 <ol>
-  <li> In the Package Explorer view, select the&nbsp;<em>MyTestCase.java</em> 
-    file from your <em>test</em> package and drag it into the&nbsp;<em>junit.framework</em> package.&nbsp;
+  <li> In the Package Explorer view, select the <em>MyTestCase.java</em> 
+    file from the <em>test</em> package and drag it into the <em>junit.samples</em> package. 
     (Dragging and dropping the file is similar to selecting the file and
-    choosing <strong>Refactor &gt; Move </strong>from the context menu.)&nbsp;
+    choosing <strong>Refactor &gt; Move </strong>from the context menu.
   </li>
   <li> You will be prompted as to whether you want to update references to the
-    file you are moving.&nbsp; Typically, you will want to do this to avoid compile errors.&nbsp; You can
+    file you are moving. Typically, you will want to do this to avoid compile errors. You can
     press the <strong>Preview </strong>button to see the list of changes that
     will be made as a result of the move.
   </li>
   <li>
-<p>Press <strong>Finish</strong>.&nbsp; The file 
+<p>Press <strong>Finish</strong>. The file 
     is moved, and its package declaration changes to reflect the new location.</p>
-    <p> <img src="../images/qs-44.gif" alt="Editor with updated package declaration" height="183" width="466"> 
+    <p> <img src="../images/qs-44.gif" alt="File moved to junit.samples package"> 
     </p>
     </li>
-  <li> Select the&nbsp;<em>MyTestCase.java</em> file and drag it into the root 
+  <li> Select the <em>MyTestCase.java</em> file and drag it into the root 
     directory of the JUnit project. Once again, you will be prompted to decide
-    how to handle updates to the references to the file.&nbsp; You may <strong>Preview&nbsp;</strong>
+    how to handle updates to the references to the file. You may <strong>Preview</strong>
     a list of these changes or you may press <strong>OK </strong>to complete the
-    change without previewing.&nbsp; After you have pressed <strong>OK </strong>(or
+    change without previewing. After you have pressed <strong>OK </strong>(or
     <strong>Finish </strong>from the preview window), a default package is created to contain the 
     class, and the package declaration is removed to reflect the file's location
     in the default package. 
-    <p> <img src="../images/qs-45.gif" alt="Editor without package declaration" height="160" width="506"> 
+    <p> <img src="../images/qs-45.gif" alt="File moved to default package"> 
     </p>
   </li>
   </ol>
@@ -47,25 +47,25 @@ semantic behavior. </p>
   addition to the update references options you've already seen.</p>
   <ol>
   <li> 
-    Select the&nbsp;<em>MyTestCase.java</em> file and from its context menu, select&nbsp;<strong>Refactor 
+    Select the <em>MyTestCase.java</em> file and from its context menu, select <strong>Refactor 
     &gt; Move</strong>.</li>
     <li> In the Move dialog, expand the hierarchy to browse the 
-    possible new locations for the resource. Select the&nbsp;<em>junit.framework</em> 
-    package, then click&nbsp;<strong>OK</strong>. The class is moved, and its 
+    possible new locations for the resource. Select the <em>junit.samples</em> 
+    package, then click <strong>OK</strong>. The class is moved, and its 
     package declaration is updated to the new location. 
-    <p> <img src="../images/qs-46.gif" alt="Move destination dialog" height="415" width="346"> 
+    <p> <img src="../images/qs-46.gif" alt="Move destination dialog"> 
     </p>
  </li>
 </ol>
-<img src="../images/ngrelc.gif" alt="Related concepts" border="0" height="27" width="159"> 
+<img src="../images/ngrelc.gif" alt="Related concepts" border="0"> 
 <p> <a href="../tasks/tasks-6.htm">Java views</a><br>
   <a href="../concepts/concepts-9.htm">Refactoring support</a> </p>
-<p> <img src="../images/ngrelt.gif" alt="Related tasks" border="0" height="27" width="159"> 
+<p> <img src="../images/ngrelt.gif" alt="Related tasks" border="0"> 
 </p>
 <p> <a href="../tasks/tasks-80.htm">Refactoring</a><br>
   <a href="../tasks/tasks-85.htm">Copying and moving Java elements</a><br>
   <a href="../tasks/tasks-51.htm">Moving folders, packages and files</a> </p>
-<p> <img src="../images/ngrelr.gif" alt="Related reference" border="0" height="27" width="159"> 
+<p> <img src="../images/ngrelr.gif" alt="Related reference" border="0"> 
 </p>
 <p> <a href="../reference/ref-menu-refactor.htm">Refactoring actions</a><br>
   <a href="../reference/ref-117.htm">Refactoring wizard</a><br>
