--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-2.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-2.htm
@@ -62,8 +62,7 @@
 		</p>
       </li>
       <li>
-        Select <b>Java &gt; New Project </b> in the tree pane to display the <strong>New Project</strong> preference page. Confirm that <strong>As source and output location
-        use</strong> is set to <strong>Project</strong>.
+        Select <b>Java &gt; New Project </b> in the tree pane to display the <strong>New Project</strong> preference page. Confirm that <strong>Source and output folder </strong> is set to <strong>Project</strong>.
 		<p>
 		<img src="../images/qs-3.gif" alt="New project preference page">
 		</p>
