--- a/bundles/org.eclipse.platform.doc.isv/guide/firstplugin_install.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/firstplugin_install.htm
@@ -15,19 +15,20 @@ Installing and running the plug-in
 Installing and running the plug-in</H2>
 <P >
 Let's put everything together so that we can run our new plug-in.&nbsp; </P>
-<P >
-  First, we need to compile our classes into a jar called
-<b>helloworld.jar</b>.  Why?  Because that's where we told the platform our plug-in could be found.&nbsp;You
-  can do this by choosing <b>File-&gt;Export</b> and exporting your generated
-  class file to a <b>JAR File</b>.&nbsp; </P>
-<P >
-  Next, we install the plug-in into a directory underneath the platform's plug-in directory.  This directory corresponds to our plug-in id, which must be unique.&nbsp;
-The standard practice for plug-in directory names is to use the plug-in's fully
-qualified id, including the dots.&nbsp; In this case, we need to create a directory named <b>org.eclipse.examples.helloworld</b> inside the platform's plug-in directory. (The plug-in directory is named
-<b>plugins</b> and is typically located underneath the main directory where you installed the platform.) We copy the
-<b> helloworld.jar</b> and the <b> plugin.xml</b> to this new directory.&nbsp;
-  (You can export the <b>plugin.xml</b> to the file system using the <b>File-&gt;Export</b>
-  wizard.) </P>
+<P > First, we need to compile our classes into a jar called <b>helloworld.jar</b>. 
+  Why? Because that's where we told the platform our plug-in could be found.&nbsp;You 
+  can do this by selecting the project, choosing <b>File &gt; Export</b> and exporting 
+  your generated class file to a <b>JAR File</b>.&nbsp; </P>
+<P > Next, we install the plug-in into a directory underneath the platform's plug-in 
+  directory. This directory corresponds to our plug-in id, which must be unique.&nbsp; 
+  The standard practice for plug-in directory names is to use the plug-in's fully 
+  qualified id, including the dots.&nbsp; In this case, we need to create a directory 
+  named <b>org.eclipse.examples.helloworld</b> inside the platform's plug-in directory. 
+  (The plug-in directory is named <b>plugins</b> and is typically located underneath 
+  the main directory where you installed the platform.) We copy the <b> helloworld.jar</b> 
+  and the <b> plugin.xml</b> to this new directory.&nbsp; (You can export the 
+  <b>plugin.xml</b> to the file system using the <b>File &gt; Export</b> wizard 
+  with destination type <strong>File system</strong>.) </P>
 <P >
 <img alt="" border="0" src="images/helloinstall.jpg" width="740" height="528"> </P>
 <P >If you are currently running the workbench, you will need to shut it down
@@ -38,9 +39,8 @@ exactly how plug-ins are installed and found in the platform.&nbsp; The PDE
 plug-in automates much of this process by introducing a special launcher that
 launches a self-hosted workbench.&nbsp; We are ignoring this for now to keep
 things simple.)&nbsp;</P>
-<P > How do we run the plug-in?&nbsp; We can see all of the views
-that have been contributed by plug-ins using the <b>Window-&gt;Show
-View</b> menu.</P>
+<P > How do we run the plug-in?&nbsp; We can see all of the views that have been 
+  contributed by plug-ins using the <b>Window &gt;Show View</b> menu.</P>
 
 <img alt="" border="0" src="images/perspectivemenu.jpg" width="391" height="257">
 <P >
