Renamed running Ant task doc

--- a/bundles/org.eclipse.platform.doc.user/concepts/concepts-antsupport.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/concepts-antsupport.htm
@@ -35,7 +35,7 @@ runtime preference page, under <b>Window &gt; Preferences &gt; Ant &gt; Runtime<
 <br><a href="../concepts/cexttools.htm">External tools</a>
 </p>
 <p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br>
-<a href="../tasks/tasks-89.htm">Running Ant build files</a></p>
+<a href="../tasks/tasks-ant-running.htm">Running Ant build files</a></p>
 <p><img border="0" src="../images/ngrelr.gif" alt="Related reference" width="159" height="27">
 <br><a href="../reference/ref-antprefs.htm">Ant</a>
 </p>
