--- a/bundles/org.eclipse.platform.doc.user/concepts/cexttools.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/cexttools.htm
@@ -220,7 +220,7 @@ selected.
 <p><img SRC="../images/ngrelr.gif" ALT="Related reference" BORDER=0 >
 <p><img SRC="../images/ngrelt.gif" ALT="Related tasks" BORDER=0 height=27 width=159>
 <br><a href="../tasks/tasks-90.htm">Running external tools</a>
-<br><a href="../tasks/tasks-89.htm">Running Ant build files</a>
+<br><a href="../tasks/tasks-ant-running.htm">Running Ant build files</a>
 <br>&nbsp;
 <p><a href="../hglegal2002.htm"><img SRC="../images/ngibmcpy2002.gif" ALT="Copyright IBM Corp. and others 2000, 2002. All Rights Reserved." BORDER=0 height=14 width=324></a>
 </body>
