--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-ant-running.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-ant-running.htm
@@ -41,7 +41,7 @@ go to the <b>Run &gt; External Tools</b> menu.
 </p>
 
 <p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br>
-<a href="../tasks/tasks-90.htm">Running external tools</a><br>
+<a href="../tasks/tasks-exttools-running.htm">Running external tools</a><br>
 <a href="../tasks/tasks-ant-classpath.htm">Modifying the Ant classpath</a><br>
 <a href="../tasks/tasks-ant-version.htm">Using a different version of Ant</a><br>
 <a href="../tasks/tasks-ant-addtasksandtypes.htm">Adding new tasks and types</a><br>
