Removed outdated "M5" reference

--- a/bundles/org.eclipse.platform.doc.user/tips/platform_tips.html
+++ b/bundles/org.eclipse.platform.doc.user/tips/platform_tips.html
@@ -106,9 +106,7 @@ and Tricks.]</p>
       written to the <b>Console</b> view in the same hierarchical format seen
       when running Ant from the command line. Ant tasks (for example &quot;[mkdir]&quot;)
       are hyperlinked to the associated Ant build file, and javac error reports
-      are hyperlinked to the associated Java source file and line number. (Currently, 
-      error linking only works for errors reported by the Eclipse Java compiler; 
-      other javac error output formats will be added for M5). 
+      are hyperlinked to the associated Java source file and line number.
       <p>The Console now supports hyperlinks for javac and jikes as well as the
         Eclipse Java compiler. All such error reports are hyperlinked to the associated 
         Java source file and line number.</p></td>
