--- a/bundles/org.eclipse.platform.doc.user/concepts/cpathvars.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/cpathvars.htm
@@ -23,8 +23,8 @@ system.
 <p>
 You can load a project that uses path variables even if you do not currently have all 
 the path variables defined in your workspace. A linked resource that uses a missing path
-variable is flagged using a special decorator icon. In addition, the <b>Info</b> 
-property page and the <b>Properties</b> view for a linked resource indicate the 
+variable is flagged using a special decorator icon. In addition, the <b>File > Properties > Info</b> 
+property page and the <b>Window > Show View > Other > Basic > Properties</b> view for a linked resource indicate the 
 variable and whether it is defined or not. A path variable can also specify a 
 location that does not currently exist on the file system. Linked resources that use such
 a path variable are indicated using the same decorator icon mentioned above.
