35251 - non-uniform capitalization of command line options

--- a/bundles/org.eclipse.platform.doc.user/tasks/running_eclipse.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/running_eclipse.htm
@@ -290,7 +290,7 @@ The general form of running the Eclipse executable is:</p>
     </tr>
     <tr> 
       <TD vAlign=top width="33%">
-<pre><b>-classloaderProperties</b> <var>[file]</var></pre></TD>
+<pre><b>-classloaderproperties</b> <var>[file]</var></pre></TD>
     <TD width="65%">Activates platform class loader enhancements using the class 
       loader properties file at the given location, if specified. The file argument 
       can be either a file path or a URL. Note that relative URLs are not allowed. 
@@ -300,7 +300,7 @@ The general form of running the Eclipse executable is:</p>
     </tr>
     <tr> 
       <TD vAlign=top width="33%">
-<pre><b>-noLazyRegistryCacheLoading</b></pre></TD>
+<pre><b>-nolazyregistrycacheloading</b></pre></TD>
     <TD width="65%">Deactivates platform plug-in registry cache loading optimization. 
     By default, extensions' configuration elements will be loaded from the registry cache 
     (when available) only on demand, reducing memory footprint. This option will force the 
